Arrumado card da carteira, melhorado a tela de login e sistema de refresh do token do usuario

--- a/angular.json
+++ b/angular.json
@@ -95,6 +95,7 @@
                         ],
                         "styles": [
                             "src/styles.scss",
+                            "node_modules/primeicons/primeicons.css"
                         ],
                         "scripts": []
                     }
