--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
         "@fullcalendar/daygrid": "^6.0.3",
         "@fullcalendar/interaction": "^6.0.3",
         "@fullcalendar/timegrid": "^6.0.3",
+        "angular": "^1.8.3",
         "chart.js": "^3.3.2",
         "primeflex": "^3.3.1",
         "primeicons": "6.0.1",
-        "primeng": "^17.2.0",
+        "primeng": "^17.18.11",
         "prismjs": "^1.29.0",
+        "prysme": "file:",
         "quill": "^2.0.2",
         "rxjs": "~7.8.1",
         "tslib": "^2.5.0",
